<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnNa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnHap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="44dp"
        android:text="@string/hap"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBBa"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnNa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnBBa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="37dp"
        android:text="@string/bba"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGop"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/back"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:text="@string/sms"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNa" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRun"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnNa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="200dp"
        android:text="@string/na"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRun"
        app:layout_constraintEnd_toStartOf="@+id/btnNa"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="41dp"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="41dp"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="41dp"
        android:text="@string/gop"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNa"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/num"
        android:layout_width="398dp"
        android:layout_height="47dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>